# vibify

./: .gitignore  DOCKER.md  Procfile  README.md  docker-compose.yml  docker.env.example  features.txt  project-structure.txt  test_file_exists.py  upload_music.txt
agent_handover/: agent_handover_01.txt  (+3 more)
src/backend/: .dockerignore  .railwayignore  Dockerfile  OPTIMIZATIONS.md  README.md  check_db.py  debug_env.py  delete_missing_thumbnails.py  env.example  pyproject.toml  requirements.txt  run_server.py  start_optimized.py  start_production.py  test_optimizations.py  test_performance.py  test_upload.py  test_upload_files.py  test_user_folders.py  test_user_upload.py  upload_new_songs.ps1  upload_new_songs.sh
src/backend/app/: __init__.py  main.py
src/backend/app/api/: auth.py  songs.py  upload.py
src/backend/app/config/: constants.py  logging_global.py  simple_config.py
src/backend/app/database/: __init__.py  connection.py
src/backend/app/database/migrations/: delete_user_by_username.sql
src/backend/app/models/: __init__.py  song.py
src/backend/app/services/: song_service.py  upload_service.py
src/backend/app/utils/: b2_client.py  helpers.py  validators.py
src/backend/scripts/: upload_complete.py  upload_from_json.py  upload_songs.py  upload_to_supabase.py
src/backend/scripts/b2_upload/: upload_files_to_b2.py
src/backend/test_upload/: 0000000.json  0000001.json  0000002.json  0000003.json  0000004.json
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/app/: __init__.py
src/backend/tests/app/api/: test_songs.py  test_upload.py
(+74 files in other folders)
